--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: Start instance
       env:
         aws-instance-id: ${{ secrets.AWS_INSTANCE_ID }}
-      run: aws ec2 start-instances --instance-ids $aws-instance-id
+      run: aws ec2 start-instances --instance-ids ${aws-instance-id}
 
   work:
     name: Run tests
@@ -45,4 +45,4 @@ jobs:
     - name: Stop instance
       env:
         aws-instance-id: ${{ secrets.AWS_INSTANCE_ID }}
-      run: aws ec2 stop-instances --instance-ids $aws-instance-id
+      run: aws ec2 stop-instances --instance-ids ${aws-instance-id}
