--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,11 +26,12 @@ jobs:
 
     - name: Start instance
       env:
-        aws-instance-id: ${{ secrets.AWS_INSTANCE_ID }}
-      run: aws ec2 start-instances --instance-ids "$aws-instance-id"
+        aws_instance_id: ${{ secrets.AWS_INSTANCE_ID }}
+      run: aws ec2 start-instances --instance-ids "$aws_instance_id"
 
   work:
     name: Run tests
+    needs: start
     runs-on: ubuntu-20.04
 
     steps:
@@ -39,10 +40,11 @@ jobs:
 
   stop:
     name: Stop ec2 instance
+    needs: work
     runs-on: ubuntu-20.04
 
     steps:
     - name: Stop instance
       env:
-        aws-instance-id: ${{ secrets.AWS_INSTANCE_ID }}
-      run: aws ec2 stop-instances --instance-ids "$aws-instance-id"
+        aws_instance_id: ${{ secrets.AWS_INSTANCE_ID }}
+      run: aws ec2 stop-instances --instance-ids "$aws_instance_id"
